docker/prod/cloud/example/patch-seb-gui-add.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seb-guiservice
spec:
  template:
    spec:
      containers:
        - name: seb-guiservice
          image: sebadmin/seb-server-gui:sprint-testing
          imagePullPolicy: Always
