docker/prod/cloud/example/patch-seb-web-add.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seb-webservice
spec:
  template:
    spec:
      containers:
        - name: seb-webservice
          imagePullPolicy: Always
