docker/prod/cloud/example/patch-sps-web-delete.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sps-webservice
spec:
  template:
    spec:
      containers:
        - name: sps-webservice
